added cart qty logic
