# restapi/operations/cart/remove_item_responses.go
@@ -1,0 +1,148 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package cart
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"e-food/models"
+)
+
+// RemoveItemOKCode is the HTTP code returned for type RemoveItemOK
+const RemoveItemOKCode int = 200
+
+/*RemoveItemOK Success response when item is removed from cart
+
+swagger:response removeItemOK
+*/
+type RemoveItemOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.SuccessResponse `json:"body,omitempty"`
+}
+
+// NewRemoveItemOK creates RemoveItemOK with default headers values
+func NewRemoveItemOK() *RemoveItemOK {
+
+	return &RemoveItemOK{}
+}
+
+// WithPayload adds the payload to the remove item o k response
+func (o *RemoveItemOK) WithPayload(payload *models.SuccessResponse) *RemoveItemOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the remove item o k response
+func (o *RemoveItemOK) SetPayload(payload *models.SuccessResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *RemoveItemOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// RemoveItemBadRequestCode is the HTTP code returned for type RemoveItemBadRequest
+const RemoveItemBadRequestCode int = 400
+
+/*RemoveItemBadRequest Bad Request
+
+swagger:response removeItemBadRequest
+*/
+type RemoveItemBadRequest struct {
+}
+
+// NewRemoveItemBadRequest creates RemoveItemBadRequest with default headers values
+func NewRemoveItemBadRequest() *RemoveItemBadRequest {
+
+	return &RemoveItemBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *RemoveItemBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// RemoveItemNotFoundCode is the HTTP code returned for type RemoveItemNotFound
+const RemoveItemNotFoundCode int = 404
+
+/*RemoveItemNotFound Item to be added Not Found
+
+swagger:response removeItemNotFound
+*/
+type RemoveItemNotFound struct {
+}
+
+// NewRemoveItemNotFound creates RemoveItemNotFound with default headers values
+func NewRemoveItemNotFound() *RemoveItemNotFound {
+
+	return &RemoveItemNotFound{}
+}
+
+// WriteResponse to the client
+func (o *RemoveItemNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// RemoveItemInternalServerErrorCode is the HTTP code returned for type RemoveItemInternalServerError
+const RemoveItemInternalServerErrorCode int = 500
+
+/*RemoveItemInternalServerError Server error
+
+swagger:response removeItemInternalServerError
+*/
+type RemoveItemInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewRemoveItemInternalServerError creates RemoveItemInternalServerError with default headers values
+func NewRemoveItemInternalServerError() *RemoveItemInternalServerError {
+
+	return &RemoveItemInternalServerError{}
+}
+
+// WithPayload adds the payload to the remove item internal server error response
+func (o *RemoveItemInternalServerError) WithPayload(payload string) *RemoveItemInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the remove item internal server error response
+func (o *RemoveItemInternalServerError) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *RemoveItemInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
